kitten/reported_bugs/rust/rust-86237/stderr.txt
error[E0747]: constant provided when a type was expected

 --> mutant.rs:6:32

  |

6 | impl < const N : usize > Foo < N >

  |                                ^



error: internal compiler error: compiler/rustc_middle/src/ty/subst.rs:538:17: type parameter `U/#1` (U/1) out of range when substituting, substs=[[type error]]

 --> mutant.rs:6:26

  |

6 | impl < const N : usize > Foo < N >

  |                          ^^^^^^^^^



thread 'rustc' panicked at 'Box<dyn Any>', /rustc/eab201df7028ebb6812c0b1a01702ac6ecfcceed/compiler/rustc_errors/src/lib.rs:953:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (eab201df7 2021-06-09) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [type_of] computing type of `<impl at mutant.rs:6:1: 11:2>`

#1 [collect_mod_item_types] collecting item types in top-level module

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0747`.

